@@ -21,6 +21,7 @@ import java.util.Optional;
 import java.util.Random;
 
 @Service
+@Transactional
 public class AuthService {
 
     @Autowired
@@ -43,7 +44,7 @@ public class AuthService {
 
     // OTP validity in minutes
     private static final long OTP_VALIDITY_MINUTES = 10;
-    // Max OTP send attempts per phone per window
+    // Max OTP send attempts per email per window
     private static final int MAX_OTP_SEND_PER_WINDOW = 5;
     // Window for OTP send rate limiting in minutes
     private static final int OTP_SEND_WINDOW_MINUTES = 15;
@@ -51,13 +52,18 @@ public class AuthService {
     private static final int MAX_OTP_ATTEMPTS = 5;
 
     /**
-     * Sends an OTP to the given phone number via email (for now).
-     * Implements rate limiting: max 5 sends per phone per 15 minutes.
+     * Sends an OTP to the given email address.
+     * Implements rate limiting: max 5 sends per email per 15 minutes.
      */
-    public void sendOtp(String phone) {
+    public void sendOtp(String email) {
+        if (email == null || email.trim().isEmpty()) {
+            throw new RuntimeException("Email is required");
+        }
+        String emailClean = email.trim().toLowerCase();
+
         // Rate limiting: count how many OTPs have been sent in the last window
-        long countSent = otpRequestRepository.countByPhoneAndCreatedAfter(
-                phone,
+        long countSent = otpRequestRepository.countByEmailAndCreatedAtAfter(
+                emailClean,
                 Instant.now().minus(OTP_SEND_WINDOW_MINUTES, ChronoUnit.MINUTES)
         );
         if (countSent >= MAX_OTP_SEND_PER_WINDOW) {
@@ -72,12 +78,13 @@ public class AuthService {
         Instant now = Instant.now();
         Instant expiresAt = now.plus(OTP_VALIDITY_MINUTES, ChronoUnit.MINUTES);
 
-        // Delete any existing OTP requests for this phone (to invalidate previous OTPs)
-        otpRequestRepository.deleteByPhone(phone);
+        // Delete any existing OTP requests for this email (to invalidate previous OTPs)
+        otpRequestRepository.deleteByEmail(emailClean);
+        otpRequestRepository.flush();
 
         // Save new OTP request
         OtpRequest otpRequest = new OtpRequest();
-        otpRequest.setPhone(phone);
+        otpRequest.setEmail(emailClean);
         otpRequest.setOtpHash(otpHash);
         otpRequest.setExpiresAt(expiresAt);
         otpRequest.setCreatedAt(now);
@@ -85,23 +92,27 @@ public class AuthService {
         otpRequest.setVerified(false);
         otpRequestRepository.save(otpRequest);
 
-        // For now, we send via email (since we don't have SMS gateway)
-        // In production, replace with SMS provider (Twilio, MSG91, etc.)
-        // Find user by phone to get email (if exists)
-        User user = userRepository.findByPhone(phone).orElse(null);
-        String email = (user != null && user.getEmail() != null) ? user.getEmail() : "unknown";
-        emailService.sendOtpEmail(email, otp);
-        System.out.println("OTP sent to " + email + " for phone " + phone);
+        // Send via email
+        try {
+            emailService.sendOtpEmail(emailClean, otp);
+            System.out.println("OTP sent to " + emailClean);
+        } catch (Exception e) {
+            System.err.println("FAILED to send OTP email: " + e.getMessage());
+        }
+        System.out.println("==========================================");
+        System.out.println("DEVELOPMENT OTP FOR " + emailClean + ": " + otp);
+        System.out.println("==========================================");
     }
 
     public AuthResponse login(AuthRequest request) {
         User user = null;
 
-        if (request.getPhone() != null && request.getOtp() != null) {
+        if (request.getEmail() != null && request.getOtp() != null) {
             // OTP login path
-            Optional<OtpRequest> otpRequestOpt = otpRequestRepository.findByPhone(request.getPhone());
+            String emailClean = request.getEmail().trim().toLowerCase();
+            Optional<OtpRequest> otpRequestOpt = otpRequestRepository.findByEmail(emailClean);
             if (otpRequestOpt.isEmpty()) {
-                throw new RuntimeException("No OTP request found for this phone. Please request an OTP first.");
+                throw new RuntimeException("No OTP request found for this email. Please request an OTP first.");
             }
             OtpRequest otpRequest = otpRequestOpt.get();
 
@@ -129,7 +140,7 @@ public class AuthService {
             otpRequestRepository.save(otpRequest);
 
             // Retrieve user
-            user = userRepository.findByPhone(request.getPhone())
+            user = userRepository.findByEmail(emailClean)
                     .orElseThrow(() -> new RuntimeException("User not found"));
 
             // Check if account is active
@@ -140,14 +151,15 @@ public class AuthService {
             if (!"APPROVED".equals(user.getVerificationStatus())) {
                 throw new RuntimeException("Account is not approved. Please wait for admin approval.");
             }
-            // Mark phone as verified
+            // Mark phone/email as verified
             if (!user.getPhoneVerified()) {
                 user.setPhoneVerified(true);
                 userRepository.save(user);
             }
         } else if (request.getEmail() != null && request.getPassword() != null) {
-            // Email/Password login for admin
-            user = userRepository.findByEmail(request.getEmail())
+            // Email/Password login
+            String emailClean = request.getEmail().trim().toLowerCase();
+            user = userRepository.findByEmail(emailClean)
                     .orElseThrow(() -> new RuntimeException("User not found"));
             // Check if account is active
             if (!user.getIsActive()) {
@@ -174,7 +186,7 @@ public class AuthService {
         }
 
         String token = jwtTokenProvider.generateToken(
-                user.getPhone(),
+                user.getEmail(),
                 user.getRole(),
                 user.getId(),
                 storeId
@@ -191,78 +203,71 @@ public class AuthService {
             throw new RuntimeException("Invalid role: " + role);
         }
 
-        // For phone-based roles, we require OTP verification
-        if ("CUSTOMER".equals(role) || "STORE_ADMIN".equals(role) ||
-            "DELIVERY_PARTNER".equals(role)) {
-            if (request.getOtp() == null || request.getOtp().isBlank()) {
-                throw new RuntimeException("OTP is required for phone-based registration");
-            }
+        if (request.getEmail() == null || request.getEmail().trim().isEmpty()) {
+            throw new RuntimeException("Email is required for registration");
+        }
+        String emailClean = request.getEmail().trim().toLowerCase();
 
-            // Verify OTP
-            Optional<OtpRequest> otpRequestOpt = otpRequestRepository.findByPhone(request.getPhone());
-            if (otpRequestOpt.isEmpty()) {
-                throw new RuntimeException("No OTP request found. Please request an OTP first.");
-            }
-            OtpRequest otpRequest = otpRequestOpt.get();
-
-            // Check if OTP has expired
-            if (otpRequest.getExpiresAt().isBefore(Instant.now())) {
-                throw new RuntimeException("OTP has expired. Please request a new one.");
-            }
-
-            // Check if already verified
-            if (otpRequest.isVerified()) {
-                throw new RuntimeException("OTP already used. Please request a new one.");
-            }
-
-            // Check attempts
-            if (otpRequest.getAttemptCount() >= MAX_OTP_ATTEMPTS) {
-                throw new RuntimeException("Too many OTP attempts. Please request a new OTP.");
-            }
-
-            // Increment attempt count
-            otpRequest.setAttemptCount(otpRequest.getAttemptCount() + 1);
-            otpRequestRepository.save(otpRequest);
-
-            // Check OTP matches
-            if (!passwordEncoder.matches(request.getOtp(), otpRequest.getOtpHash())) {
-                throw new RuntimeException("Invalid OTP");
-            }
-
-            // OTP is correct
-            otpRequest.setVerified(true);
-            otpRequestRepository.save(otpRequest);
+        // For all registration roles, we now require email OTP verification
+        if (request.getOtp() == null || request.getOtp().isBlank()) {
+            throw new RuntimeException("OTP is required for registration");
         }
 
-        // Check if phone already registered
-        if (userRepository.findByPhone(request.getPhone()).isPresent()) {
-            throw new RuntimeException("Phone number already registered");
+        // Verify OTP
+        Optional<OtpRequest> otpRequestOpt = otpRequestRepository.findByEmail(emailClean);
+        if (otpRequestOpt.isEmpty()) {
+            throw new RuntimeException("No OTP request found. Please request an OTP first.");
         }
-        if (request.getEmail() != null && !request.getEmail().trim().isEmpty()) {
-            if (userRepository.findByEmail(request.getEmail()).isPresent()) {
-                throw new RuntimeException("Email already registered");
-            }
+        OtpRequest otpRequest = otpRequestOpt.get();
+
+        // Check if OTP has expired
+        if (otpRequest.getExpiresAt().isBefore(Instant.now())) {
+            throw new RuntimeException("OTP has expired. Please request a new one.");
+        }
+
+        // Check if already verified
+        if (otpRequest.isVerified()) {
+            throw new RuntimeException("OTP already used. Please request a new one.");
+        }
+
+        // Check attempts
+        if (otpRequest.getAttemptCount() >= MAX_OTP_ATTEMPTS) {
+            throw new RuntimeException("Too many OTP attempts. Please request a new OTP.");
+        }
+
+        // Increment attempt count
+        otpRequest.setAttemptCount(otpRequest.getAttemptCount() + 1);
+        otpRequestRepository.save(otpRequest);
+
+        // Check OTP matches
+        if (!passwordEncoder.matches(request.getOtp(), otpRequest.getOtpHash())) {
+            throw new RuntimeException("Invalid OTP");
+        }
+
+        // OTP is correct
+        otpRequest.setVerified(true);
+        otpRequestRepository.save(otpRequest);
+
+        // Check if email already registered
+        if (userRepository.findByEmail(emailClean).isPresent()) {
+            throw new RuntimeException("Email already registered");
         }
 
         User user = new User();
         user.setPhone(request.getPhone());
-        user.setEmail(request.getEmail());
+        user.setEmail(emailClean);
         user.setFullName(request.getName());
         user.setRole(role);
-        // For phone-based roles, we now have verified OTP, so set phoneVerified to true
-        if ("CUSTOMER".equals(role) || "STORE_ADMIN".equals(role) || "DELIVERY_PARTNER".equals(role)) {
-            user.setPhoneVerified(true);
-        } else {
-            // For SYSTEM_ADMIN (though not allowed here), we don't verify phone via OTP
-            user.setPhoneVerified(false);
-        }
+        user.setPhoneVerified(true);
+
         // Set verification status based on role
         if ("STORE_ADMIN".equals(role) || "DELIVERY_PARTNER".equals(role)) {
             user.setVerificationStatus("PENDING"); // pending admin approval
         } else {
-            // CUSTOMER and SYSTEM_ADMIN (though SYSTEM_ADMIN is not allowed here) are auto-approved
+            // CUSTOMER is auto-approved
             user.setVerificationStatus("APPROVED");
         }
+
         if (request.getPassword() != null && !request.getPassword().trim().isEmpty()) {
             user.setPasswordHash(passwordEncoder.encode(request.getPassword()));
         }
@@ -279,14 +284,6 @@ public class AuthService {
             store.setOwner(user);
             store.setName(request.getStoreName());
             store.setAddress(request.getStoreAddress());
-            // Location point
-            // We'll need to set the location using JTS
-            // For simplicity, we'll skip setting the location here; the frontend should send it and we'll set it.
-            // But we need to set it to save the store.
-            // We'll create a point using the provided lat/lng.
-            // We'll need to add the dependency for JTS, but it's already there.
-            // We'll create a GeometryFactory and Point.
-            // We'll do it here.
             try {
                 org.locationtech.jts.geom.GeometryFactory geometryFactory = new org.locationtech.jts.geom.GeometryFactory(
                         new org.locationtech.jts.geom.PrecisionModel(), 4326);
@@ -302,7 +299,7 @@ public class AuthService {
         }
 
         String token = jwtTokenProvider.generateToken(
-                user.getPhone(),
+                user.getEmail(),
                 user.getRole(),
                 user.getId(),
                 storeId
